# FundVerse

./: Cargo.toml  FundVerse_backend.did  ICP_FUNDING_README.md  README.md  dfx.json  package-lock.json  package.json
src/Admin/: Admin.did  Cargo.toml
src/Admin/src/: lib.rs
src/FundVerse_backend/: Cargo.toml  FundVerse_backend.did
src/FundVerse_backend/src/: lib.rs
src/FundVerse_frontend/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
src/FundVerse_frontend/src/: App.tsx  index.css
src/FundVerse_frontend/src/components/: CampaignCard.tsx  ContributionDialog.tsx  CreateProjectDialog.tsx  Dashboard.tsx  ProjectsList.tsx
src/FundVerse_frontend/src/lib/: ic.ts  utils.ts
src/Fund_Flow/: Cargo.toml  Fund_Flow.did
src/Fund_Flow/src/: lib.rs
