[package]
name = "FundVerse_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-timers = "0.11" # Feel free to remove this dependency if you don't need timers
ic-cdk-macros = "0.13"
ic-stable-structures = "0.6"   # or latest
serde = { version = "1.0", features = ["derive"] }
imp = "0.1.0"
getrandom = { version = "0.2", features = ["custom"] }
