[package]
name = "Fund_Flow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-macros = "0.13"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }
getrandom = { version = "0.2", features = ["custom"] }
